# Hall-thruster-fluid-solvers

./: CMakeLists.txt  Readme.md  ionization_rate_data.csv  neutral_rate_data.csv
include/: conduction.hpp  constants.hpp  discharge.hpp  electricity.hpp  params.hpp  solve.hpp  solver.hpp  states.hpp  walls.hpp
include/interpolator/: interpolator.hpp
src/: conduction.cpp  discharge.cpp  electricity.cpp  main.cpp  params.cpp  solve.cpp  solver.cpp  walls.cpp
